# HW_WEB_12

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 63a664960b6b_init.py  6d92c3e02a80_new_init.py  76338932fce8_something_new.py  f70ba39f4195_init_new.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/schemas/: contact.py  user.py
src/services/: auth.py
