[tool.poetry]
name = "hw-web-12"
version = "0.1.0"
description = ""
authors = ["ArtemZhuravlev <Utah954@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
pydantic = {extras = ["email"], version = "^2.6.1"}
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
python-multipart = "^0.0.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"
utcnow = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
